# modular-reduction

./: .gitignore  A3-gmodb-idea.ipynb  A3_dual_and_sups.ipynb  B2-gmodb-idea.ipynb  B3-gmodb-idea.ipynb  CITATION.cff  G2-gmodb-idea.ipynb  README.md  cellcode.txt  check-GmodP-for-basis-A3.ipynb  check-GmodP-for-basis-A4.ipynb  check_kl_A4.ipynb  check_orthogonality.ipynb  dual-basis-A4.ipynb  dual-basis-A5.ipynb  figure_out_cells_minimal.ipynb  minimal_master_A1.ipynb  minimal_master_A2.ipynb  minimal_master_A3-Copy1.ipynb  minimal_master_A3.ipynb  minimal_master_A4.ipynb  minimal_master_A5.ipynb  minimal_master_B2.ipynb  minimal_master_B3.ipynb  minimal_master_B4.ipynb  minimal_master_C3.ipynb  minimal_master_D4.ipynb  minimal_master_F4.ipynb  minimal_master_G2.ipynb  minimal_master_supsub_flip.ipynb  pyproject.toml  steinberg-a2.ipynb  svk-a2.ipynb  svk-a3.ipynb  svk-b3.ipynb  svk-g2-Copy1.ipynb  svk-g2.ipynb
dual_steinberg/: beautiful-svk-a4-Copy1.ipynb  beautiful-svk-a4.ipynb  beautiful-svk-a5.ipynb  beautiful-svk-b3-Copy1.ipynb  beautiful-svk-b3.ipynb  dual_steinberg-A3-Copy1.ipynb  dual_steinberg-A3.ipynb  dual_steinberg-A4.ipynb
dual_steinberg/.ipynb_checkpoints/: beautiful-svk-a4-Copy1-checkpoint.ipynb  beautiful-svk-a4-checkpoint.ipynb  beautiful-svk-b3-Copy1-checkpoint.ipynb  beautiful-svk-b3-checkpoint.ipynb  dual_steinberg-A3-Copy1-checkpoint.ipynb  dual_steinberg-A3-checkpoint.ipynb  dual_steinberg-A4-checkpoint.ipynb
examples/: basic_usage.py  provenance_report.py  type_a_reduction.py
kl_polys/: a3.json  a4.json  find_kl_polys.ipynb
modular_reduction/: __main__.py  api.py  cells.py  context.py  export.py  kls.py
outputs/: A1_output.txt  A2_output.txt  A3_output.txt  A4_output.txt  A5_output.txt  B2_output.txt  B3_output.txt  B4_output.txt  C3_output.txt  G2_output.txt
paper/: bibl.bib  main.run.xml  main.tex
positivity/: canonical_basis_clean.ipynb  find_refls_A.ipynb  find_refls_B3.ipynb  find_refls_clean_B3_old.ipynb  just_act_B3.ipynb
src/modular_reduction/: api.py  (+7 more)
tests/: test_api.py  test_cli.py  test_duality.py  test_paper_tables.py  test_small_types.py
(+6 files in other folders)
