[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "modular-reduction"
version = "0.1.0"
description = "Sage-native tools for Kazhdan-Lusztig-Steinberg bases and modular reduction computations."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Calder Morton-Ferguson" },
]
maintainers = [
  { name = "Calder Morton-Ferguson" },
]
keywords = ["sage", "weyl-groups", "kazhdan-lusztig", "finite-reductive-groups", "modular-representation-theory"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[project.scripts]
modred = "modular_reduction.__main__:main"

[tool.setuptools.packages.find]
include = ["modular_reduction*"]

[tool.pytest.ini_options]
addopts = "-m \"not slow\""
testpaths = ["tests"]
markers = [
  "slow: expensive Sage computations that are skipped by default",
]
